[#16] refactor : 날씨,온도 태그 @NotBlank 추가, 계절 태그 null 허용되도록 추가